--- a/juridik.rmd
+++ b/juridik.rmd
@@ -22,3 +22,7 @@ Verksamhetchefen: Om en person skall ämna sjukhuset där det finns fara för at
 Mord, våltäkt, grov misshandel = minst 1 år
 
 Skyldighet för verksamhetschef, eller den som fått detta delegerat, att om en patient som lämnar  eller  avser  lämna  sjukhuset  är farlig  för  någon  annans  personliga  säkerhet  eller  sitt eget liv omedelbart underrättar någon närstående till patienten och att, om patienten är farlig  för  viss  person,  även  denna  samt,  om  det  behövs,  lämplig  myndighet,  ofta  polisen  (2 § 4 p förordningen om verksamhetschef). Se äv. under rubrik Trafiknykterhetsbrott.
+
+## Skyldighet att anmäla brott
+
+<!-- Av 15 kap 10 § i strafflagen följer att var och en (inklusive yrkesutbildade personer inom hälso- och sjukvården) ska göra en anmälan till polisen eller till den som hotas av fara, om han eller hon får kännedom om att ett grovt brott är på färde, och brottet ännu kan förhindras. -->
